--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.22.0"
   }
 }
